@@ -201,6 +201,24 @@ name|hadoop
 operator|.
 name|hive
 operator|.
+name|ql
+operator|.
+name|plan
+operator|.
+name|TableDesc
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
 name|shims
 operator|.
 name|ShimLoader
@@ -1169,6 +1187,39 @@ argument_list|,
 name|job
 argument_list|)
 decl_stmt|;
+name|TableDesc
+name|tableDesc
+init|=
+name|part
+operator|.
+name|getTableDesc
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+operator|(
+name|tableDesc
+operator|!=
+literal|null
+operator|)
+operator|&&
+name|tableDesc
+operator|.
+name|isNonNative
+argument_list|()
+condition|)
+block|{
+return|return
+name|super
+operator|.
+name|getSplits
+argument_list|(
+name|job
+argument_list|,
+name|numSplits
+argument_list|)
+return|;
+block|}
 if|if
 condition|(
 operator|(
