@@ -1169,32 +1169,40 @@ argument_list|,
 name|cloneJobConf
 argument_list|)
 decl_stmt|;
-name|Path
-index|[]
-name|paths
-init|=
-name|FileInputFormat
-operator|.
-name|getInputPaths
-argument_list|(
-name|job
-argument_list|)
-decl_stmt|;
-comment|// for now we only get one path for splits which access a non-native
-comment|// table; should probably add a corresponding assertion
 name|PartitionDesc
 name|part
 init|=
-name|getPartitionDescFromPath
-argument_list|(
 name|pathToPartitionInfo
-argument_list|,
-name|paths
-index|[
-literal|0
-index|]
+operator|.
+name|get
+argument_list|(
+name|hsplit
+operator|.
+name|getPath
+argument_list|()
+operator|.
+name|toString
+argument_list|()
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+operator|(
+name|part
+operator|!=
+literal|null
+operator|)
+operator|&&
+operator|(
+name|part
+operator|.
+name|getTableDesc
+argument_list|()
+operator|!=
+literal|null
+operator|)
+condition|)
+block|{
 name|Utilities
 operator|.
 name|copyTableJobPropertiesToConf
@@ -1207,6 +1215,7 @@ argument_list|,
 name|cloneJobConf
 argument_list|)
 expr_stmt|;
+block|}
 return|return
 operator|new
 name|HiveRecordReader
